Changed the maximize button from green to blue to make it more visible, see #2824
# 0.00.12 (51100) Apr 23, 2011
Added handle images onto the side of the pipe
Added a checkbox to enable/disable dots
Fix red dot density to be 1/3
Removed slider for dot density
Pulled back the red dye by 10 percent since fluid shouldn't flow next to the barrier edge
Randomly spread out the water in x and y so it doesn't look so discrete when it falls a long way and drops separate
Fixed: measuring tape doesn't reset
Removed unused code
Fixed: Reset All does not reset location of ruler
Fixed: Velocity sensors don't change their units to ft/s in any modules, they are always in m/s.
Switched to use VelocitySensor and VelocitySensorNode from piccolo-phet
Merged ThreePatchImagePressureNode into PressureSensorNode
Improvements for ThreeImageNode
Simplified ThreePatchImageNode, factoring out a new subclass ThreePatchImagePressureNode
Fixed: handle on water tower looks fuzzy because it is scaled up
Use PhetColorScheme.RED_ALTERNATIVE color to improve color blindness support
Moved velocity sensor initial condition so they don't overlap
Moved water tower legs to the back layer to prevent sticking into the water tank
Fixed: Water drops should get smaller as they go faster
Fixed: Fluid Density text field is not wide enough to display the value (problem in all modules)
Fixed: On Mac, in default locations, pressure sensors are partially obscured by control panel
Proposed solution for faucet slider not being vertically centered in faucet handle on mac
Converted horizontal layout to vertical for faucet radio buttons
Converted from ButtonExpander to MinimizeMaximizeNode for fluid density control
Converted control panels to use ControlPanelNode
Made the handle on the top of the water tower 25% bigger
# 0.00.11 (48549) Feb 2, 2011
Added a hole in the top of the water tower
# 0.00.10 (48517) Feb 2, 2011
Added a hole in the water tank
Made slider door act binary instead of continuous